--- a/www/custom.css
+++ b/www/custom.css
@@ -340,8 +340,17 @@ details summary::-webkit-details-marker {
 
 #custom-packages-details > summary,
 #custom-scripts-details > summary {
-  margin-left: -1.5em;
-  padding-left: 1.5em;
+  margin-left: 0;
+  padding-left: 0.5em;
+  list-style-position: outside !important;
+}
+
+#custom-packages-details > summary h3,
+#custom-scripts-details > summary h3 {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
 }
 
 #postinst-details summary h4,
