--- a/www/custom.css
+++ b/www/custom.css
@@ -340,8 +340,8 @@ details summary::-webkit-details-marker {
 
 #custom-packages-details > summary,
 #custom-scripts-details > summary {
-  margin-left: 0;
-  padding-left: 0.5em;
+  margin-left: -1.5em;
+  padding-left: 1.5em;
   list-style-position: outside !important;
 }
 
