--- a/www/custom.css
+++ b/www/custom.css
@@ -341,7 +341,7 @@ details summary::-webkit-details-marker {
 #custom-packages-details > summary,
 #custom-scripts-details > summary {
   margin-left: -1.5em;
-  padding-left: 1.5em;
+  padding-left: ;
   list-style-position: outside !important;
 }
 
