--- a/www/custom.css
+++ b/www/custom.css
@@ -335,6 +335,7 @@ details summary::-webkit-details-marker {
 #custom-packages-details,
 #custom-scripts-details {
   margin-top: 1.5em;
+  padding-left: 1.5em;
 }
 
 #custom-packages-details > summary,
@@ -709,6 +710,7 @@ details[open] > summary ~ * {
     text-overflow: clip;
   }
   
+  /* h3のアコーデオン矢印を表示領域内に収める */
   #custom-packages-details > summary,
   #custom-scripts-details > summary {
     margin-left: -0.5em !important;
