--- a/www/custom.css
+++ b/www/custom.css
@@ -641,7 +641,8 @@ details[open] > summary ~ * {
 }
 
 /* ===== Responsive Design ===== */
-@media (max-width: 600px) {
+/* adjust for mobile view */
+@media (min-resolution: 400dpi), (max-width: 600px), (pointer: coarse) {
   .form-row {
     flex-direction: column;
   }
